2014-05-28  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/cons_smacof_pip.m: (0.4.1)

	- Fix bug. If the user provides a problem with no free vertices
	(i.e. there's nothing to optimise), make the function exit
	gracefully instead of with an error.

2014-05-26  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/cons_smacof_pip.m: (0.4.0)
	* matlab/test/test_cons_smacof_pip.m: (0.2.5)

	- Fix bug. In some cases, SCIP was returning a solution as
	"valid", but when we checked it, some of the tetrahedra had small
	negative areas. After asking in the SCIP mailing list, Stefan
	Vigerske noted that constraints are fulfilled within a
	tolerance. E.g. SCIP considers 0 >= -1e-8 as true for a 1e-6
	tolerance. But for us, this tolerance is not acceptable because it
	produces small overlaps in the output parametrization. This has to
	be corrected in two places: In the functions that create the
	string of constraints, so that the constraint+tolerance are always
	within the actual constraint values we want, and in this function,
	being able to modify the tolerance ('scip_opts.numerics_feastol').

	- Fix bug. The initial guess may have a low stress, but be an
	invalid solution. Because we don't have a function to check the
	validity of the initial solution yet, we always replace the
	initial guess by any valid solution found by SMACOF. In theory, if
	the initial guess is already the best valid solution, this could
	lead to the algorithm returning a suboptimal valid solution. But
	we hope that in practice, the algorithm wouldn't degrade the
	solution much.

	- Fix bug. If SCIP cannot find a valid solution (e.g. we set a too
	short time limit or it doesn't exist), then we cannot update the
	current solution. This also means that we need to stop the
	optimization, because the problem matrices and vectors won't
	change, and basically we would try to solve the same problem
	again, not reaching a solution either. Note however that it's